--- a/data-array/src/app/product-list/product-list.component.html
+++ b/data-array/src/app/product-list/product-list.component.html
@@ -1,7 +1,16 @@
+<h1>Prodotti</h1>
 <ul>
-    @for (product of products; track product) {
-        <li>
-            <app-product-detail [product]="product"></app-product-detail>
-        </li>
-    }
+    <p *ngFor="let product of products; let i = index">
+      {{ product.name }} - {{ product.price }}€
+      <button (click)="selectProduct(product)">Dettagli</button>
+      <button (click)="deleteProduct(i)">Elimina</button>
+    </p>
 </ul>
+<app-product-detail *ngIf="selectedProduct" [product]="selectedProduct"></app-product-detail>
+
+<form (ngSubmit)="onSubmit()">
+    <input [(ngModel)]="newProduct.name" name="name" placeholder="Nome del prodotto" required />
+    <input [(ngModel)]="newProduct.price" name="price" type="number" placeholder="Prezzo" required />
+    <input [(ngModel)]="newProduct.description" name="description" placeholder="Descrizione" required />
+    <button type="submit">Aggiungi Prodotto</button>
+</form>
