--- a/data-array/src/app/app.component.html
+++ b/data-array/src/app/app.component.html
@@ -1,1 +1,2 @@
 <app-product-list></app-product-list>
+<!-- Usa il componente ProductList, che mostra la lista dei prodotti, il form per aggiungerli e i dettagli del prodotto selezionato -->
